
[tool.poetry]
name = "basementjam"
version = "0.1.0"
description = ""
authors = ["isaacphi <isaac.phil@gmail.com>"]
license = "AGPL"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
Hypercorn = "^0.11.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.13.0"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
